--- a/clock-widget/index.html
+++ b/clock-widget/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -39,5 +39,74 @@
         setInterval(updateClock, 1000);
         updateClock(); // Initial call to display time immediately
     </script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Responsive Notion Clock Widget</title>
+<style>
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    font-family: Arial, sans-serif;
+}
+#clock-container {
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+#clock {
+    font-weight: bold;
+    color: #333;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    display: inline-block;
+    max-width: 100%;
+}
+</style>
+</head>
+<body>
+<div id="clock-container">
+    <div id="clock"></div>
+</div>
+
+<script>
+function updateClock() {
+    const now = new Date();
+    const hours = String(now.getHours()).padStart(2, '0');
+    const minutes = String(now.getMinutes()).padStart(2, '0');
+    const seconds = String(now.getSeconds()).padStart(2, '0');
+    document.getElementById('clock').textContent = `${hours}:${minutes}:${seconds}`;
+}
+
+function adjustClockSize() {
+    const container = document.getElementById('clock-container');
+    const clock = document.getElementById('clock');
+    const containerWidth = container.offsetWidth;
+    
+    // Adjust font size based on container width
+    const fontSize = Math.max(16, Math.min(containerWidth / 8, 60)); // Min 16px, Max 60px
+    clock.style.fontSize = `${fontSize}px`;
+}
+
+window.addEventListener('resize', adjustClockSize);
+setInterval(updateClock, 1000);
+updateClock(); // Initial call to display time immediately
+adjustClockSize(); // Initial size adjustment
+</script>
 </body>
 </html>
