--- a/clock-widget/index.html
+++ b/clock-widget/index.html
@@ -64,16 +64,16 @@ html, body {
 #clock-container {
     width: 100%;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
 }
 #clock {
     font-weight: bold;
     color: #333;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    background-color: rgba(137, 211, 211, 0.778);
+    padding: 10px;
+    border-radius: 50px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
     display: inline-block;
     max-width: 100%;
 }
